   * More generic processing history for most Stream and Trace methods.
 - obspy.ah
   * New submodule for reading the AH (Ad Hoc) waveform format
 - obspy.core:
   * Support for basic custom namespace tags in QuakeML I/O (see #454)
   * `interpolate()` method for Stream/Trace objects.
   * Dictionary values added to an AttribDict will now be converted to an
     AttribDict.
 - obspy.css:
   * Support for little-endian binary and ASCII files (see #881).
 - obspy.fdsn:
   * WADL files are cached per Python process.
   * Bulk station downloading using POST requests.
   * Support for FDSNWS 1.1, e.g. the `matchtimeseries` parameter for the
     station service.
 - obspy.imaging:
   * Maintain beach ball aspect ratio through optional axes argument (see
     #734)
   * Refactored Catalog.plot() into helper routine
     obspy.imaging.maps.plot_basemap() (see #753).
 - obspy.mseed:
   * `details=True` when reading will now write to
     `Trace.stats.mseed.blkt1001.timing_quality` instead of
     `Trace.stats.mseed.timing_quality`.
   * The timing quality will now also be written to a file if it is set.
   * Non-existing values when reading with `details=True` will now be set to
     `False` instead of `-1`.
   * New utility function `obspy.mseed.util.set_flags_in_fixed_header()`
     giving the ability to overwrite flags in the fixed header of exiting
     MiniSEED files.
 - obspy.ndk:
   * New submodule able to read NDK files from the Global CMT project.
 - obspy.neries:
   * The whole module is deprecated and will be removed with the next major
     release. To access EMSC event data please use the obspy.fdsn client
     (use `Client(base_url='NERIES', ...)`), for access to ORFEUS waveform
     data please use the obspy.fdsn client (use
     `Client(base_url='ORFEUS', ...)`) and for travel times please use
     obspy.taup.
 - obspy.seishub:
   * Helper method `Client.event.getEvents()` to fetch a `Catalog` object
     from a seishub server of version 1.4.0 or higher.