@@ -1,0 +1,26 @@
+package obspy.cnv
+=================
+
+Copyright
+---------
+GNU Lesser General Public License, Version 3 (LGPLv3)
+
+Copyright (c) 2014 by:
+    * Tobias Megies
+
+
+Overview
+--------
+CNV file format support for ObsPy
+
+The obspy.cnv module provides write support for CNV event summary file
+format as used by VELEST program.
+
+ObsPy is an open-source project dedicated to provide a Python framework for
+processing seismological data. It provides parsers for common file formats and
+seismological signal processing routines which allow the manipulation of
+seismological time series (see Beyreuther et al. 2010, Megies et al. 2011).
+The goal of the ObsPy project is to facilitate rapid application development
+for seismology.
+
+For more information visit http://www.obspy.org.
