@@ -1,0 +1,21 @@
+# -*- coding: utf-8 -*-
+"""
+obspy.cnv - CNV file format support for ObsPy
+=============================================
+
+This module provides write support for CNV event summary file
+format as used by VELEST program.
+
+:copyright:
+    The ObsPy Development Team (devs@obspy.org)
+:license:
+    GNU Lesser General Public License, Version 3
+    (http://www.gnu.org/copyleft/lesser.html)
+"""
+from __future__ import (absolute_import, division, print_function,
+                        unicode_literals)
+from future.builtins import *  # NOQA
+
+if __name__ == '__main__':
+    import doctest
+    doctest.testmod(exclude_empty=True)
