@@ -402,6 +402,7 @@ def make_format_plugin_table(group="waveform", method="read", numspaces=4,
     ======= ================= =======================================
         Format  Required Module   _`Linked Function Call`
         ======= ================= =======================================
+        CNV     :mod:`obspy.cnv`  :func:`obspy.cnv.core.write_CNV`
         JSON    :mod:`obspy.core` :func:`obspy.core.json.core.writeJSON`
         QUAKEML :mod:`obspy.core` :func:`obspy.core.quakeml.writeQuakeML`
         ZMAP    :mod:`obspy.zmap` :func:`obspy.zmap.core.writeZmap`
